# free-association

./: .cursorignore  .env  .env.example  .gitignore  API_QUICK_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLECTIVE.md  COMPONENT_V5_MIGRATION_IN_PROGRESS.md  CONTRIBUTING.md  DATA_RELAY_COMPARISON.md  DATA_RELAY_SYSTEM.md  DEPLOYMENT.md  DOCKER_QUICKSTART.md  EXTENDED-README.md  FINAL_SUMMARY.md  GLOSSARY.md  HOLSTER_MIGRATION_INCREMENTAL.md  HOLSTER_MIGRATION_PLAN.md  HOLSTER_NULL_TOMBSTONE_FIX.md  HOLSTER_USER_GUIDE.md  I18N_SETUP_SUMMARY.md  INSTALLATION_NOTES.md  MIGRATION_PLAN.md  P2P-DECIDER-README.md  PORTUGUESE_QUICK_REFERENCE.md  PORTUGUESE_SETUP_SUMMARY.md  PORTUGUESE_TRANSLATIONS.md  PWA-iOS-GITHUB-PAGES-FIX.md  QUICKSTART.md  REACTIVE-P2P-README.md  README-TOUR.md  README.md  RELAYS_SEPARATE.md  RSSTREAM_FILE_STRUCTURE.md  RSSTREAM_MIGRATION.md  SECURITY.md  SERVER_MIGRATION.md  SETUP_GUIDE.md  (+41 more)
.cursor/: worktrees.json
.github/: FUNDING.yml
coverage/: clover.xml  coverage-final.json  lcov.info
data-api/: .env.example  Dockerfile  README.md  package.json  (+1 more)
protocol/: TODO.md  api.md  attack-vectors.md  centralized.hi  centralized.hs  centralized.ts  direct.hi  direct.hs  gun-schema.js  main.hi  persistant.cabal  persistant.hs  protocol.cabal  simple.hs  simple.html
protocol/dist-newstyle/cache/: config
protocol/old/: original.hs
protocol/peerbit/: README.md  package-lock.json  package.json  peerbit.ts  peerbit_readme.md
protocol/scheme/: stack.md
protocol/supabase/: README.md
protocol/supabase/migrations/: queries.sql
(+1600 files in other folders)
