cabal-version:      2.4
name:               FreeAssociation
version:            0.1.0.0
synopsis:           Free Association with persistence
description:        A system for managing associations and capacity sharing
license:            MIT
author:             PlayNet
maintainer:         playnet@example.com
build-type:         Simple

executable persistant
  main-is:            persistant.hs
  hs-source-dirs:     .
  default-language:   Haskell2010
  build-depends:      base >= 4.13 && < 5
                    , containers
                    , mtl
                    , persistent >= 2.0
                    , persistent-sqlite >= 2.0
                    , persistent-template >= 2.0
                    , monad-logger
                    , time
                    , text
  ghc-options:        -Wall -threaded 